--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,10 @@
         android:id="@+id/statistics"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="201dp"
-        android:layout_marginBottom="521dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="64dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/environment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -34,6 +31,32 @@
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:text="Haftalık İstatislik" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/environment"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginEnd="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/statistics"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/statistics"
+        app:layout_constraintTop_toTopOf="@+id/statistics">
+
+        <ImageView
+            android:layout_width="180dp"
+            android:layout_height="137dp"
+            app:srcCompat="@mipmap/environment" />
+
+        <TextView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:gravity="center"
+            android:text="Çalışma Ortamı" />
 
     </LinearLayout>
 
