--- a/app/src/main/res/layout/activity_environment.xml
+++ b/app/src/main/res/layout/activity_environment.xml
@@ -1,89 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:background="#2F3136"
+    >
     <LinearLayout
-        android:id="@+id/help_setUp_env"
+        android:background="#2F3136"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        android:layout_marginTop="10dp"
-        android:gravity="center|center_vertical"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/ideal_working_env"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="210dp"
-            android:layout_height="180dp"
-            app:srcCompat="@mipmap/help_setup_env" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="center"
-            android:text="Çalışma Ortamınızı Birlikte Ayarlayalım!"
-            android:textSize="18dp" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="20dp">
 
+            <ImageView
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_alignParentRight="true"
+                android:src="@mipmap/jim_carrey" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:gravity="center_vertical"
+                android:text="Orhan Özalp"
+                android:textColor="#FFFFFF"
+                android:textSize="25sp" />
+
+
+        </RelativeLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alignmentMode="alignMargins"
+            android:background="#36393F"
+            android:columnCount="1"
+
+            android:columnOrderPreserved="true"
+            android:rowCount="3">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="24dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:id="@+id/set_working_env"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="3dp">
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="125dp"
+                        android:src="@mipmap/help_setup_env" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:text="Çalışma Ortamınızı Birikte Ayarlayalım!"
+                        android:textColor="#6f6f6f"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="24dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:id="@+id/motivation"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="3dp">
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="125dp"
+                        android:src="@mipmap/ideal_working_env" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:text="İdeal Çalışma Ortamı"
+                        android:textColor="#6f6f6f"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="24dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:id="@+id/my_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="3dp">
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="125dp"
+                        android:src="@mipmap/did_you_know" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:text="Pratik Bilgiler"
+                        android:textColor="#6f6f6f"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+
+
+
+        </GridLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ideal_working_env"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center|center_vertical"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/did_you_know"
-        app:layout_constraintTop_toBottomOf="@+id/help_setUp_env"
-        tools:layout_editor_absoluteX="-29dp">
-
-        <ImageView
-            android:layout_width="210dp"
-            android:layout_height="180dp"
-            app:srcCompat="@mipmap/ideal_working_env" />
-
-        <TextView
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="center"
-            android:text="İdel Çalışma Ortamı"
-            android:textSize="18dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/did_you_know"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginBottom="30dp"
-        android:gravity="center|center_vertical"
-
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ideal_working_env"
-        tools:layout_editor_absoluteX="-48dp">
-
-        <ImageView
-            android:layout_width="210dp"
-            android:layout_height="180dp"
-            app:srcCompat="@mipmap/did_you_know" />
-
-        <TextView
-            android:layout_width="213dp"
-            android:layout_height="wrap_content"
-
-            android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="center"
-            android:text="Bunları Biliyor Musunuz?"
-            android:textSize="18dp" />
-
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
