--- a/app/src/main/res/layout/activity_help_environment.xml
+++ b/app/src/main/res/layout/activity_help_environment.xml
@@ -74,10 +74,20 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
+                        android:layout_marginTop="6dp"
                         android:text="Bize Çalışma Masanızı Gönder!"
                         android:textColor="#6f6f6f"
                         android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/photo_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:fontFamily="sans-serif-condensed-medium"
+
+                        android:textColor="#FF0000"
+                        android:textSize="12sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
@@ -90,6 +100,7 @@
                 app:cardElevation="6dp">
 
                 <LinearLayout
+
                     android:id="@+id/add_voice"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -98,6 +109,7 @@
                     android:padding="3dp">
 
                     <ImageView
+
                         android:layout_width="242dp"
                         android:layout_height="120dp"
                         android:src="@mipmap/add_voice" />
@@ -105,9 +117,18 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
+                        android:layout_marginTop="6dp"
                         android:text="Ortam Sesini Ölç"
                         android:textColor="#6f6f6f"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/record_voice_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:text="Kayıt Alınıyor.. 10"
+                        android:textColor="#FF0057"
                         android:textSize="18sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -136,7 +157,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
+                        android:layout_marginTop="6dp"
                         android:text="Ortam Işığını Ölç"
                         android:textColor="#6f6f6f"
                         android:textSize="18sp" />
