--- a/app/src/main/res/drawable/gradient_card.xml
+++ b/app/src/main/res/drawable/gradient_card.xml
@@ -3,9 +3,9 @@
     <item>
         <shape>
             <gradient
-                android:angle="90"
-                android:startColor="@color/colorAccent"
-                android:endColor="@color/colorPrimary"
+                android:angle="225"
+                android:startColor="#ffffff"
+                android:endColor="@color/sliderColorTransparentWhite"
                 android:type="linear"/>
         </shape>
     </item>
