--- a/app/src/main/res/drawable/gradient_main.xml
+++ b/app/src/main/res/drawable/gradient_main.xml
@@ -3,9 +3,9 @@
     <item>
         <shape>
             <gradient
-                android:angle="90"
-                android:startColor="@color/colorAccent"
-                android:endColor="@color/colorPrimary"
+                android:angle="315"
+                android:startColor="#36393F"
+                android:endColor="#36393F"
                 android:type="linear"/>
         </shape>
     </item>
