--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,47 +6,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#2F3136"
+    android:background="@drawable/gradient_main"
     >
+
     <LinearLayout
-        android:background="#2F3136"
         android:layout_width="match_parent"
+        android:layout_marginBottom="10dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="20dp">
-
-            <ImageView
-                android:layout_width="62dp"
-                android:layout_height="62dp"
-                android:layout_alignParentRight="true"
-                android:src="@mipmap/jim_carrey" />
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:fontFamily="sans-serif-condensed-medium"
-                android:gravity="center_vertical"
-                android:text="Orhan Özalp"
-                android:textColor="#FFFFFF"
-                android:textSize="25sp" />
+                android:layout_height="match_parent"
+                android:background="#2F3136">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp">
+
+                    <ImageView
+                        android:layout_width="62dp"
+                        android:layout_height="62dp"
+                        android:layout_alignParentRight="true"
+                        android:src="@mipmap/jim_carrey" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="62dp"
+                        android:fontFamily="sans-serif-condensed-medium"
+                        android:gravity="center_vertical"
+                        android:text="Orhan Özalp"
+                        android:textColor="#FFFFFF"
+                        android:textSize="25sp" />
 
 
-        </RelativeLayout>
+                </RelativeLayout>
+            </LinearLayout>
 
         <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="546dp"
+            android:layout_height="545dp"
             android:alignmentMode="alignMargins"
-            android:background="#36393F"
+            android:layout_marginTop="10dp"
             android:columnCount="2"
-
             android:columnOrderPreserved="true"
+            android:background="@android:color/transparent"
             android:rowCount="2">
 
             <androidx.cardview.widget.CardView
@@ -55,6 +63,7 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="10dp"
+                android:padding="20dp"
                 app:cardCornerRadius="18dp"
                 app:cardElevation="6dp">
 
@@ -64,7 +73,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="3dp">
+                    android:padding="3dp"
+                    android:background="@drawable/gradient_card">
 
                     <ImageView
                         android:layout_width="120dp"
@@ -76,7 +86,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="Çalışma Ortamı"
-                        android:textColor="#6f6f6f"
+                        android:textColor="#2F3136"
                         android:textSize="18sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -96,7 +106,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="3dp">
+                    android:padding="3dp"
+                    android:background="@drawable/gradient_card">
 
                     <ImageView
                         android:layout_width="120dp"
@@ -108,7 +119,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="Motivasyon"
-                        android:textColor="#6f6f6f"
+                        android:textColor="#2F3136"
                         android:textSize="18sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -128,7 +139,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="3dp">
+                    android:padding="3dp"
+                    android:background="@drawable/gradient_card">
 
                     <ImageView
                         android:layout_width="120dp"
@@ -140,7 +152,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="Bilgilerim"
-                        android:textColor="#6f6f6f"
+                        android:textColor="#2F3136"
                         android:textSize="18sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -152,7 +164,8 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="10dp"
                 app:cardCornerRadius="18dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp"
+                android:background="@drawable/gradient_card">
 
                 <LinearLayout
                     android:id="@+id/statistics"
@@ -160,7 +173,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="3dp">
+                    android:padding="3dp"
+                    android:background="@drawable/gradient_card">
 
                     <ImageView
                         android:layout_width="120dp"
@@ -172,7 +186,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="Gelişimlerim"
-                        android:textColor="#6f6f6f"
+                        android:textColor="#2F3136"
                         android:textSize="18sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
