--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="sliderColorPrimary">#262938</color>
+    <color name="sliderColorPrimaryDark">#181A24</color>
+    <color name="sliderColorAccent">#ffffff</color>
+    <color name="sliderColorTransparentWhite">#cccccc</color>
 </resources>
