--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="customRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/customratingstars</item>
+        <item name="android:minHeight">100dp</item>
+        <item name="android:maxHeight">100dp</item>
+        <item name="android:minWidth">150dp</item>
+        <item name="android:maxWidth">150dp</item>
+
+    </style>
+
 </resources>
