--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/slide_image"
+        android:id="@+id/quote_img"
         android:layout_width="198dp"
         android:layout_height="178dp"
         android:layout_marginTop="100dp"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slide_image" />
+        app:layout_constraintTop_toBottomOf="@+id/quote_img" />
 
     <TextView
         android:id="@+id/slide_description"
