--- a/app/src/main/res/layout/activity_result_environment.xml
+++ b/app/src/main/res/layout/activity_result_environment.xml
@@ -15,6 +15,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-black"
+            android:text="Ana Sayfa"
+            android:textColor="#FFFFFF" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -45,6 +54,7 @@
 
 
             </RelativeLayout>
+
         </LinearLayout>
 
     <GridLayout
@@ -213,5 +223,6 @@
         </androidx.cardview.widget.CardView>
 
      </GridLayout>
+
     </LinearLayout>
 </ScrollView>
