--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -46,12 +47,17 @@
 
                 </RelativeLayout>
             </LinearLayout>
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="#EvdeKal"
+            android:textSize="15dp"
+            android:textColor="@android:color/white"></TextView>
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="545dp"
             android:alignmentMode="alignMargins"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:columnCount="2"
             android:columnOrderPreserved="true"
             android:background="@android:color/transparent"
